--- a/examples/ClubMembers/package.json
+++ b/examples/ClubMembers/package.json
@@ -12,20 +12,23 @@
     "build:watch": "cross-env NODE_ENV=development webpack -d --watch"
   },
 
-  "devDependencies": {
-    "typescript": "latest",
-
+  "dependencies": {
     "react": "latest",
-    "@types/react": "latest",
     "react-dom": "latest",
-    "@types/react-dom": "latest",
 
     "react-form-with-constraints": "^0.8.0",
     "react-form-with-constraints-tools": "^0.8.0",
 
     "mobx": "latest",
     "mobx-react": "latest",
-    "mobx-react-devtools": "latest",
+    "mobx-react-devtools": "latest"
+  },
+
+  "devDependencies": {
+    "typescript": "latest",
+
+    "@types/react": "latest",
+    "@types/react-dom": "latest",
 
     "ts-node": "latest",
     "@types/node": "latest",
