--- a/examples/Password/package.json
+++ b/examples/Password/package.json
@@ -12,16 +12,19 @@
     "build:watch": "cross-env NODE_ENV=development webpack -d --watch"
   },
 
+  "dependencies": {
+    "react": "latest",
+    "react-dom": "latest",
+
+    "react-form-with-constraints": "^0.8.0",
+    "react-form-with-constraints-tools": "^0.8.0"
+  },
+
   "devDependencies": {
     "typescript": "latest",
 
-    "react": "latest",
     "@types/react": "latest",
-    "react-dom": "latest",
     "@types/react-dom": "latest",
-
-    "react-form-with-constraints": "^0.8.0",
-    "react-form-with-constraints-tools": "^0.8.0",
 
     "ts-node": "latest",
     "@types/node": "latest",
