--- a/examples/SignUp/package.json
+++ b/examples/SignUp/package.json
@@ -14,26 +14,32 @@
     "i18next": "i18next --namespace-separator '__NS' --key-separator '__KS'"
   },
 
-  "devDependencies": {
-    "typescript": "latest",
-
+  "dependencies": {
     "react": "latest",
-    "@types/react": "latest",
     "react-dom": "latest",
-    "@types/react-dom": "latest",
 
     "react-form-with-constraints": "^0.8.0",
     "react-form-with-constraints-tools": "^0.8.0",
 
     "lodash": "latest",
-    "@types/lodash": "latest",
 
     "i18next": "latest",
-    "@types/i18next": "latest",
     "react-i18next": "latest",
+    "i18next-browser-languagedetector": "latest"
+  },
+
+  "devDependencies": {
+    "typescript": "latest",
+
+    "@types/react": "latest",
+    "@types/react-dom": "latest",
+
+    "@types/lodash": "latest",
+
+    "@types/i18next": "latest",
     "@types/react-i18next": "latest",
-    "i18next-browser-languagedetector": "latest",
     "@types/i18next-browser-languagedetector": "latest",
+
     "i18next-parser": "latest",
 
     "ts-node": "latest",
