--- a/examples/MaterialUI/package.json
+++ b/examples/MaterialUI/package.json
@@ -16,7 +16,7 @@
     "react": "latest",
     "react-dom": "latest",
 
-    "material-ui": "next",
+    "@material-ui/core": "latest",
 
     "react-form-with-constraints": "^0.8.0",
     "react-form-with-constraints-material-ui": "^0.8.0",
