--- a/packages/react-form-with-constraints/package.json
+++ b/packages/react-form-with-constraints/package.json
@@ -51,7 +51,7 @@
     "rollup-plugin-uglify": "latest",
     "rollup-plugin-gzip": "latest",
     "rollup-plugin-filesize": "latest",
-    "rollup-plugin-strip": "rollup/rollup-plugin-strip",
+    "rollup-plugin-strip": "latest",
 
     "del-cli": "latest",
     "cross-env": "latest",
