--- a/examples/Bootstrap4/package.json
+++ b/examples/Bootstrap4/package.json
@@ -14,6 +14,8 @@
     "react": "latest",
     "react-dom": "latest",
 
+    "lodash": "latest",
+
     "react-form-with-constraints": "^0.8.0",
     "react-form-with-constraints-bootstrap4": "^0.8.0",
     "react-form-with-constraints-tools": "^0.8.0",
