--- a/examples/ReactNative/package.json
+++ b/examples/ReactNative/package.json
@@ -27,6 +27,8 @@
     "react": "16.3.1",
     "react-native": "^0.54",
 
+    "lodash": "latest",
+
     "react-form-with-constraints": "../../packages/react-form-with-constraints",
     "react-form-with-constraints-native": "../../packages/react-form-with-constraints-native"
   },
@@ -36,6 +38,8 @@
 
     "@types/react": "latest",
     "@types/react-native": "latest",
+
+    "@types/lodash": "latest",
 
     "react-native-scripts": "latest",
     "react-native-typescript-transformer": "latest",
