--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "prepublishOnly": "lerna run prepublishOnly",
 
     "test": "lerna run test --stream",
-    "test:e2e": "lerna run test:e2e --stream",
+    "test:e2e": "lerna run test:e2e --stream --concurrency 1",
     "test:coverage": "lerna run test:coverage --stream",
 
     "tslint": "find . -name 'tsconfig.json' -not -path '*/node_modules/*' -print -exec tslint --config tslint.json --project '{}' \\;",
