--- a/examples/ServerSideRendering/package.json
+++ b/examples/ServerSideRendering/package.json
@@ -18,6 +18,7 @@
     "react-dom": "latest",
 
     "react-form-with-constraints": "^0.9.2",
+    "react-form-with-constraints-tools": "^0.9.2",
 
     "express": "latest"
   },
