Detect circular dependency

--- a/examples/Password/package.json
+++ b/examples/Password/package.json
@@ -48,6 +48,7 @@
     "ts-loader": "latest",
     "file-loader": "latest",
     "source-map-loader": "latest",
+    "circular-dependency-plugin": "latest",
 
     "del-cli": "latest",
     "cross-env": "latest"
