--- a/examples/Bootstrap4/package.json
+++ b/examples/Bootstrap4/package.json
@@ -48,7 +48,7 @@
 
     "webpack-cli": "latest",
     "webpack": "latest",
-    "babel-loader": "latest",
+    "babel-loader": "^7.1.5",
     "file-loader": "latest",
     "source-map-loader": "latest",
 
