--- a/examples/Password/package.json
+++ b/examples/Password/package.json
@@ -24,7 +24,7 @@
   },
 
   "devDependencies": {
-    "typescript": "latest",
+    "typescript": "^2.9.2",
 
     "@types/react": "latest",
     "@types/react-dom": "latest",
