--- a/lerna.json
+++ b/lerna.json
@@ -1,11 +1,10 @@
 {
-  "lerna": "*",
   "version": "0.9.3",
   "npmClient": "yarn",
   "useWorkspaces": true,
-  "commands": {
+  "command": {
     "publish": {
-      "ignore": [
+      "ignoreChanges": [
         "*-example"
       ]
     }
