--- a/examples/MaterialUI/package.json
+++ b/examples/MaterialUI/package.json
@@ -18,7 +18,7 @@
 
     "lodash": "latest",
 
-    "@material-ui/core": "latest",
+    "@material-ui/core": "~3.0.3",
 
     "react-form-with-constraints": "^0.9.3",
     "react-form-with-constraints-material-ui": "^0.9.3",
