--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 
     "tslint": "find . -name 'tsconfig.json' -not -path '*/node_modules/*' -print -exec tslint --config tslint.json --project '{}' \\;",
 
-    "publish:lerna": "lerna publish --npm-tag=next --skip-git # Custom example: 0.8.0-beta.1"
+    "publish:lerna": "yarn lerna publish --npm-tag=next --no-git-tag-version --no-push # Custom example: 0.8.0-beta.1"
   },
 
   "workspaces": [
