--- a/examples/MaterialUI/tsconfig.json
+++ b/examples/MaterialUI/tsconfig.json
@@ -1,6 +1,8 @@
 {
-  "extends": "../../tsconfig-react-es5",
-
+  "extends": "../../tsconfig",
+  "compilerOptions": {
+    "module": "commonjs"
+  },
   "files": [
     "App.tsx"
   ]
