--- a/examples/Password/tsconfig.json
+++ b/examples/Password/tsconfig.json
@@ -1,10 +1,11 @@
 {
-  "extends": "../../tsconfig-react-es5",
-
+  "extends": "../../tsconfig",
+  "compilerOptions": {
+    "module": "commonjs"
+  },
   "files": [
     "App.tsx"
   ],
-
   "include": [
     "*.test.e2e.ts"
   ]
