--- a/examples/ServerSideRendering/tsconfig.json
+++ b/examples/ServerSideRendering/tsconfig.json
@@ -1,3 +1,6 @@
 {
-  "extends": "../../tsconfig-react-es5"
+  "extends": "../../tsconfig",
+  "compilerOptions": {
+    "module": "commonjs"
+  }
 }
