--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,9 @@
 {
   "compilerOptions": {
     "noEmit": true,
-    "target": "es5",
-    "downlevelIteration": true,
+    "target": "es2017",
     "jsx": "react",
-    "module": "commonjs",
+    "module": "esnext",
     "moduleResolution": "node",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true, // FIXME https://github.com/Microsoft/TypeScript/issues/26193
