--- a/packages/react-form-with-constraints-tools/package.json
+++ b/packages/react-form-with-constraints-tools/package.json
@@ -43,7 +43,7 @@
   },
 
   "devDependencies": {
-    "typescript": "^2.9.2",
+    "typescript": "latest",
 
     "react": "latest",
     "@types/react": "latest",
