--- a/examples/ClubMembers/package.json
+++ b/examples/ClubMembers/package.json
@@ -25,7 +25,7 @@
   },
 
   "devDependencies": {
-    "typescript": "^2.9.2",
+    "typescript": "latest",
 
     "@types/react": "latest",
     "@types/react-dom": "latest",
