--- a/examples/HTML5Constraints/package.json
+++ b/examples/HTML5Constraints/package.json
@@ -18,7 +18,7 @@
   },
 
   "devDependencies": {
-    "typescript": "^2.9.2",
+    "typescript": "latest",
 
     "@types/react": "latest",
     "@types/react-dom": "latest",
