--- a/examples/SignUp/package.json
+++ b/examples/SignUp/package.json
@@ -29,7 +29,7 @@
   },
 
   "devDependencies": {
-    "typescript": "^2.9.2",
+    "typescript": "latest",
 
     "@types/react": "latest",
     "@types/react-dom": "latest",
