--- a/examples/WizardForm/package.json
+++ b/examples/WizardForm/package.json
@@ -20,7 +20,7 @@
   },
 
   "devDependencies": {
-    "typescript": "^2.9.2",
+    "typescript": "latest",
 
     "@types/react": "latest",
     "@types/react-dom": "latest",
