--- a/packages/react-form-with-constraints-material-ui/package.json
+++ b/packages/react-form-with-constraints-material-ui/package.json
@@ -42,18 +42,18 @@
 
   "peerDependencies": {
     "react-form-with-constraints": "^0.10.0",
-    "@material-ui/core": "~3.0.3"
+    "@material-ui/core": "^3.2.0"
   },
 
   "devDependencies": {
-    "typescript": "^2.9.2",
+    "typescript": "latest",
 
     "react": "latest",
     "@types/react": "latest",
 
     "react-form-with-constraints": "^0.10.0",
 
-    "@material-ui/core": "~3.0.3",
+    "@material-ui/core": "^3.2.0",
 
     "jest": "latest",
     "@types/jest": "latest",
