--- a/examples/HTML5ConstraintValidationAPI/package.json
+++ b/examples/HTML5ConstraintValidationAPI/package.json
@@ -1,7 +1,18 @@
 {
-  "name": "password-no-state-example",
+  "name": "html5-constraint-validation-api-example",
   "version": "1.0.0",
   "private": true,
+  "description": "React with HTML5 constraint validation API example",
+  "keywords": [
+    "react",
+    "html5",
+    "form",
+    "validation",
+    "constraints",
+    "constraint-validation-api"
+  ],
+
+  "main": "App.tsx",
 
   "scripts": {
     "clean": "del-cli build",
@@ -13,10 +24,10 @@
   },
 
   "dependencies": {
-    "react": "latest",
-    "react-dom": "latest",
+    "react-scripts": "latest",
 
-    "react-form-with-constraints": "^0.10.0"
+    "react": "latest",
+    "react-dom": "latest"
   },
 
   "devDependencies": {
