--- a/examples/MaterialUI/package.json
+++ b/examples/MaterialUI/package.json
@@ -2,6 +2,17 @@
   "name": "material-ui-example",
   "version": "1.0.0",
   "private": true,
+  "description": "react-form-with-constraints Material-UI example",
+  "keywords": [
+    "react",
+    "form",
+    "validation",
+    "react-form-with-constraints",
+    "material design",
+    "material-ui"
+  ],
+
+  "main": "App.tsx",
 
   "scripts": {
     "clean": "del-cli build",
@@ -13,6 +24,8 @@
   },
 
   "dependencies": {
+    "react-scripts": "latest",
+
     "react": "latest",
     "react-dom": "latest",
 
