--- a/examples/PlainOldReact/package.json
+++ b/examples/PlainOldReact/package.json
@@ -1,7 +1,15 @@
 {
-  "name": "html5-constraints-example",
+  "name": "plain-old-react-example",
   "version": "1.0.0",
   "private": true,
+  "description": "Plain old React form validation example",
+  "keywords": [
+    "react",
+    "form",
+    "validation"
+  ],
+
+  "main": "App.tsx",
 
   "scripts": {
     "clean": "del-cli build",
@@ -13,6 +21,8 @@
   },
 
   "dependencies": {
+    "react-scripts": "latest",
+
     "react": "latest",
     "react-dom": "latest"
   },
