--- a/examples/ReactNative/package.json
+++ b/examples/ReactNative/package.json
@@ -2,6 +2,14 @@
   "name": "react-native-example",
   "version": "1.0.0",
   "private": true,
+  "description": "react-form-with-constraints React Native example",
+  "keywords": [
+    "react",
+    "form",
+    "validation",
+    "react-form-with-constraints",
+    "react-native"
+  ],
 
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
 
