--- a/packages/react-form-with-constraints-native/package.json
+++ b/packages/react-form-with-constraints-native/package.json
@@ -28,10 +28,11 @@
     "clean": "del-cli lib lib-es5 coverage .rpt2_cache",
 
     "tsc": "tsc",
-    "build": "tsc --project tsconfig.lib.json",
+    "build": "yarn build:esnext && yarn build:es5",
+    "build:esnext": "tsc --project tsconfig.lib.json",
     "build:es5": "tsc --project tsconfig.lib-es5.json",
 
-    "prepublishOnly": "npm run clean && npm run tsc && npm run build && npm run build:es5",
+    "prepublishOnly": "yarn clean && yarn tsc && yarn build",
 
     "test": "node --trace-warnings node_modules/.bin/jest --no-cache --verbose",
     "test:coverage": "node --trace-warnings node_modules/.bin/jest --no-cache --coverage"
