--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
     "jsx": "react",
     "module": "esnext",
     "moduleResolution": "node",
-    "esModuleInterop": true,
+    "esModuleInterop": false,
+    "allowSyntheticDefaultImports": false,
     "noLib": false,
     "lib": ["dom", "dom.iterable", "es2018"],
     "experimentalDecorators": true,
