--- a/examples/HTML5ConstraintValidationAPI/tsconfig.json
+++ b/examples/HTML5ConstraintValidationAPI/tsconfig.json
@@ -1,7 +1,9 @@
 {
   "extends": "../../tsconfig",
   "compilerOptions": {
-    "module": "commonjs"
+    "module": "commonjs",
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true
   },
   "files": [
     "App.tsx"
