--- a/examples/ReactNative/tsconfig.json
+++ b/examples/ReactNative/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "extends": "../../tsconfig",
   "compilerOptions": {
-    "target": "es2015"
+    "target": "es2015",
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true
   }
 }
