--- a/examples/ServerSideRendering/package.json
+++ b/examples/ServerSideRendering/package.json
@@ -20,7 +20,7 @@
 
     "build": "cross-env NODE_ENV=development webpack -d",
 
-    "start": "npm run clean && npm run build && cd build && node server"
+    "start": "yarn clean && yarn build && cd build && node server"
   },
 
   "dependencies": {
