--- a/examples/ServerSideRendering/tsconfig.json
+++ b/examples/ServerSideRendering/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "extends": "../../tsconfig",
   "compilerOptions": {
-    "module": "commonjs"
+    "module": "commonjs",
+    "esModuleInterop": false,
+    "allowSyntheticDefaultImports": false
   }
 }
