--- a/examples/Bootstrap4/package.json
+++ b/examples/Bootstrap4/package.json
@@ -58,7 +58,7 @@
     "css-loader": "latest",
     "sass-loader": "latest",
 
-    "webpack-cli": "latest",
+    "webpack-cli": "~3.1.2",
     "webpack": "latest",
     "babel-loader": "latest",
     "file-loader": "latest",
