--- a/examples/MaterialUI/package.json
+++ b/examples/MaterialUI/package.json
@@ -31,7 +31,7 @@
 
     "lodash": "latest",
 
-    "@material-ui/core": "^3.2.0",
+    "@material-ui/core": "^3.8.1",
 
     "react-form-with-constraints": "^0.10.0",
     "react-form-with-constraints-material-ui": "^0.10.0",
@@ -49,7 +49,7 @@
     "ts-node": "latest",
     "@types/node": "latest",
 
-    "webpack-cli": "latest",
+    "webpack-cli": "~3.1.2",
     "webpack": "latest",
     "@types/webpack": "latest",
     "ts-loader": "latest",
