--- a/examples/ReactNative/package.json
+++ b/examples/ReactNative/package.json
@@ -11,7 +11,7 @@
     "react-native"
   ],
 
-  "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
+  "main": "node_modules/expo/AppEntry.js",
 
   "scripts": {
     "rm-duplicated-react-native": "rm -rf node_modules/react-form-with-constraints-native/node_modules/react-native",
@@ -22,18 +22,20 @@
     "clean": "rm -f yarn.lock && rm -rf node_modules/react-form-with-constraints && rm -rf node_modules/react-form-with-constraints-native",
     "clean:all": "rm -rf .expo && yarn clean && yarn clean:node_modules",
 
-    "start": "react-native-scripts start --reset-cache",
-    "android": "react-native-scripts android",
-    "ios": "react-native-scripts ios",
+    "tsc": "tsc",
+
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
 
     "test": "jest"
   },
 
   "dependencies": {
-    "expo": "^26",
+    "expo": "^31.0.2",
 
-    "react": "16.3.1",
-    "react-native": "^0.54",
+    "react": "16.5.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
 
     "lodash": "latest",
 
@@ -44,18 +46,20 @@
   "devDependencies": {
     "typescript": "latest",
 
+    "@babel/preset-typescript": "latest",
+    "babel-preset-expo": "^5.0.0",
+
+    "expo-cli": "^2.6.13",
+
     "@types/react": "latest",
     "@types/react-native": "latest",
 
     "@types/lodash": "latest",
 
-    "react-native-scripts": "^1.14.1",
-    "react-native-typescript-transformer": "^1.2.10",
-
     "@types/jest": "latest",
-    "jest-expo": "^26.0.0",
+    "jest-expo": "^31.0.0",
 
-    "react-test-renderer": "16.3.1",
+    "react-test-renderer": "16.5.0",
     "@types/react-test-renderer": "latest"
   }
 }
