--- a/packages/react-form-with-constraints-bootstrap4/package.json
+++ b/packages/react-form-with-constraints-bootstrap4/package.json
@@ -67,12 +67,12 @@
     "node-zopfli": "latest",
     "node-gyp": "latest",
 
-    "rollup": "latest",
+    "rollup": "^0.68.2",
     "rollup-pluginutils": "latest",
     "rollup-plugin-typescript2": "latest",
     "rollup-plugin-uglify": "latest",
     "rollup-plugin-gzip": "latest",
-    "rollup-plugin-filesize": "latest",
+    "rollup-plugin-filesize": "^5.0.1",
     "rollup-plugin-strip": "latest",
 
     "del-cli": "latest",
