TSLint for .js files

--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "test:e2e": "lerna run test:e2e --stream --concurrency 1",
     "test:coverage": "lerna run test:coverage --stream",
 
-    "tslint": "find . -name 'tsconfig.json' -not -path '*/node_modules/*' -print -exec tslint --config tslint.json --project '{}' \\;",
+    "tslint": "yarn tslint:js && yarn tslint:tsconfig",
+    "tslint:js": "find . -type f \\( -name '*.js' -or -name '*.jsx' \\) -not -path '*/node_modules/*' -print -exec tslint --config tslint.json '{}' \\;",
+    "tslint:tsconfig": "find . -type f -name 'tsconfig.json' -not -path '*/node_modules/*' -print -exec tslint --config tslint.json --project '{}' \\;",
 
     "publish:lerna": "yarn lerna publish --npm-tag=next --no-git-tag-version --no-push --registry=https://registry.npmjs.org # Custom example: 0.8.0-beta.1"
   },
