--- a/packages/react-form-with-constraints/package.json
+++ b/packages/react-form-with-constraints/package.json
@@ -74,12 +74,12 @@
     "node-zopfli": "latest",
     "node-gyp": "latest",
 
-    "rollup": "^0.68.2",
+    "rollup": "latest",
     "rollup-pluginutils": "latest",
     "rollup-plugin-typescript2": "latest",
     "rollup-plugin-uglify": "latest",
     "rollup-plugin-gzip": "latest",
-    "rollup-plugin-filesize": "^5.0.1",
+    "rollup-plugin-filesize": "latest",
     "rollup-plugin-strip": "latest",
 
     "del-cli": "latest",
