--- a/examples/ServerSideRendering/package.json
+++ b/examples/ServerSideRendering/package.json
@@ -44,7 +44,7 @@
     "ts-node": "latest",
     "@types/node": "latest",
 
-    "webpack-cli": "~3.1.2",
+    "webpack-cli": "latest",
     "webpack": "latest",
     "@types/webpack": "latest",
     "webpack-node-externals": "latest",
