Update examples to use React hooks

--- a/examples/ServerSideRendering/tsconfig.json
+++ b/examples/ServerSideRendering/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "../../tsconfig",
   "compilerOptions": {
     "module": "commonjs",
-    "esModuleInterop": false,
-    "allowSyntheticDefaultImports": false
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true
   }
 }
