--- a/examples/Password/package.json
+++ b/examples/Password/package.json
@@ -13,12 +13,12 @@
   "main": "App.tsx",
 
   "scripts": {
-    "clean": "del-cli build",
+    "clean": "rm -rf build",
 
     "tsc": "tsc",
 
-    "build": "cross-env NODE_ENV=development webpack -d",
-    "build:watch": "cross-env NODE_ENV=development webpack -d --watch",
+    "build": "webpack -d",
+    "build:watch": "webpack -d --watch",
 
     "pretest:e2e": "yarn build",
     "test:e2e": "node --trace-warnings node_modules/.bin/jest --no-cache --verbose --config jest-e2e.config.js"
@@ -59,9 +59,6 @@
     "ts-loader": "latest",
     "file-loader": "latest",
     "source-map-loader": "latest",
-    "circular-dependency-plugin": "latest",
-
-    "del-cli": "latest",
-    "cross-env": "latest"
+    "circular-dependency-plugin": "latest"
   }
 }
