--- a/packages/react-form-with-constraints/package.json
+++ b/packages/react-form-with-constraints/package.json
@@ -28,13 +28,13 @@
   "sideEffects": false,
 
   "scripts": {
-    "clean": "del-cli lib lib-es5 dist coverage .rpt2_cache README.md LICENSE CHANGELOG.md",
+    "clean": "rm -rf lib lib-es5 dist coverage .rpt2_cache README.md LICENSE CHANGELOG.md",
 
     "tsc": "tsc",
     "build": "yarn build:esnext && yarn build:es5",
     "build:esnext": "tsc --project tsconfig.lib.json",
     "build:es5": "tsc --project tsconfig.lib-es5.json",
-    "dist": "cross-env NODE_ENV=development rollup --config && cross-env NODE_ENV=production rollup --config",
+    "dist": "NODE_ENV=development rollup --config && NODE_ENV=production rollup --config",
 
     "prepack": "cp ../../README.md ../../LICENSE ../../CHANGELOG.md .",
     "prepublishOnly": "yarn clean && yarn tsc && yarn build && yarn dist",
@@ -75,9 +75,6 @@
     "rollup-plugin-typescript2": "latest",
     "rollup-plugin-uglify": "latest",
     "rollup-plugin-filesize": "latest",
-    "rollup-plugin-strip": "latest",
-
-    "del-cli": "latest",
-    "cross-env": "latest"
+    "rollup-plugin-strip": "latest"
   }
 }
