--- a/packages/react-form-with-constraints/tsconfig.json
+++ b/packages/react-form-with-constraints/tsconfig.json
@@ -7,7 +7,6 @@
 
   // List everything so that vscode displays potential errors for everything
   "include": [
-    "src/*.test.ts",
-    "src/*.test.tsx"
+    "src/**/*"
   ]
 }
