--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,6 @@
 {
-  "editor.tabSize": 2,
-  "files.trimTrailingWhitespace": true
+  // See .editorconfig
+
+  // For Prettier, Visual Studio Code needs an extension: `ext install esbenp.prettier-vscode`
+  "editor.formatOnSave": true
 }
