Ignore directories from TSLint

--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "prettier": "prettier --write \"**/*\"",
     "eslint": "eslint . '**/*.{js,jsx,ts,tsx}'",
     "tslint": "yarn tslint:js && yarn tslint:tsconfig",
-    "tslint:js": "find . -type f \\( -name '*.js' -or -name '*.jsx' \\) -not -path '*/node_modules/*' -print -exec tslint --config tslint.json '{}' \\;",
-    "tslint:tsconfig": "find . -type f -name 'tsconfig.json' -not -path '*/node_modules/*' -print -exec tslint --config tslint.json --project '{}' \\;",
+    "tslint:js": "find . -type f \\( -name '*.js' -or -name '*.jsx' \\) -not -path '*/node_modules/*' -not -path '*/build/*' -not -path '*/dist/*' -not -path '*/lib/*' -not -path '*/lib-es5/*' -not -path '*/coverage/*' -print -exec tslint --config tslint.json '{}' \\;",
+    "tslint:tsconfig": "find . -type f -name 'tsconfig.json' -not -path '*/node_modules/*' -not -path '*/build/*' -not -path '*/dist/*' -not -path '*/lib/*' -not -path '*/lib-es5/*' -not -path '*/coverage/*' -print -exec tslint --config tslint.json --project '{}' \\;",
     "publish:lerna": "yarn lerna publish --dist-tag next --no-git-tag-version --no-push --registry=https://registry.npmjs.org # Custom example: 0.8.0-beta.1"
   },
   "workspaces": [
